# Computer-Vision-1

./: CMakeLists.txt  Computer Vision 1.sln  README.md
Assignment2/: CMakeLists.txt  submission.cpp  submission.h
Docs/: CMAKE notes for compiling OpenCV in Linux.txt  debug_files_list.txt  getting_started_with_images.html  getting_started_with_images.ipynb  release_files_list.txt
Week 1/Annotate/: Annotate.vcxproj  Annotate.vcxproj.filters  main.cpp
Week 1/Assignment_QRCodeReader/: AssignmentQRCodeReader.vcxproj  main.cpp
Week 1/BasicImageOperations/: BasicImageOperations.cpp  BasicImageOperations.vcxproj  BasicImageOperations.vcxproj.filters
Week 1/BitwiseOperations/: BitwiseOperations.vcxproj  main.cpp
Week 1/GettingStarted/: GettingStarted.vcxproj  GettingStarted.vcxproj.filters  example.cpp
Week 1/SunglassesFilter/: BasicImageOperations.vcxproj.filters  SunglassesFilter.cpp  SunglassesFilter.vcxproj  dataPath.hpp
Week 2/Assignment2Annotations/: Assignment2Annotations.vcxproj  Assignment2Annotations.vcxproj.filters  main.cpp  mainAssignment2.cpp
Week 2/Assignment3Trackbars/: Assignment3Trackbars.vcxproj  Assignment3Trackbars.vcxproj.filters  main.cpp
Week 2/AssignmentsInCMake/: Steps to make CMAKE project.txt
Week 2/DataFiles/: VideoRead.cpp  VideoWrite.cpp  dataPath.hpp  myChaplinVideo.avi
Week 2/Introduction/: Introduction.vcxproj
Week 2/Keyboard/: Keyboard.vcxproj
Week 2/MouseAnnotations/: MouseAnnotations.vcxproj  MouseAnnotations.vcxproj.filters  main.cpp
Week 2/ReadDisplayVideo/: ReadDisplayVideo.vcxproj  dataPath.hpp  main.cpp
(+52 files in other folders)
